[gd_scene load_steps=3 format=3 uid="uid://couad5h3svcls"]

[ext_resource type="Script" path="res://Scenes/Object/location.gd" id="1_q701y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kiotk"]
size = Vector2(190, 170)

[node name="location" type="Area2D"]
script = ExtResource("1_q701y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_kiotk")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
